--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="text-container">
             <p>
-              My name is Gilbmet Adungo, and I am a passionate full-stack developer 
+              I am a passionate full-stack developer 
               with expertise in a variety of programming languages and frameworks. 
               With proficiency in Python, JavaScript, React, and C, I thrive in 
               creating dynamic and efficient web applications. I have extensive 
